ml-workshop-modeldb/base/modeldb-deployment.yaml
---
# Source: modeldb/charts/graphql/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modeldb
    component: graphql
  name: modeldb-graphql
spec:
  selector:
    matchLabels:
      app: modeldb
      component: graphql
  template:
    metadata:
      labels:
        app: modeldb
        component: graphql
      annotations:
        verta.ai/disable_anti_affinity: "true"
    spec:
      containers:
        - image: vertaaiofficial/modeldb-graphql:2.0.8.1
          imagePullPolicy: "Always"
          name: modeldb
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 64Mi
---
# Source: modeldb/charts/webapp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modeldb
    component: webapp
  name: modeldb-webapp
spec:
  selector:
    matchLabels:
      app: modeldb
      component: webapp
  template:
    metadata:
      labels:
        app: modeldb
        component: webapp
      annotations:
        verta.ai/disable_anti_affinity: "true"
    spec:
      containers:
        - image: quay.io/ml-aml-workshop/modeldb-frontend:15AUG2021
          # image: vertaaiofficial/modeldb-frontend:2.0.8.1
          imagePullPolicy: Always
          name: modeldb
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 1
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: [
                    "/bin/sh", "-c",
                    "sleep 10",
                ]
